<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.natallia.radaman.epamlab2module2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_small"
        android:paddingRight="@dimen/space_small">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/addressee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/hint_addressee"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/letterTopic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/hint_topic"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/letterBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="10"
                android:hint="@string/hint_letter"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonSendEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_normal"
            android:layout_weight="1"
            android:background="@android:color/holo_purple"
            android:padding="@dimen/space_small"
            android:text="@string/send_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_normal" />

        <Button
            android:id="@+id/buttonBackFirstApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_normal"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:padding="@dimen/space_small"
            android:text="@string/backToApp1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_normal" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
